# gtfs-server

./: Cargo.toml  LICENSE.md  README.md  build.rs
frontend/: .eslintrc.js  package-lock.json  package.json  vue.config.js
frontend/src/: App.vue  datatypes.ts
frontend/src/components/: InputBar.vue  Map.vue  SideBar.vue  StopTimeUpdate.vue  Timetable.vue
gtfs_server/: Cargo.toml  build.rs  rustfmt.toml
gtfs_server/migrations/2020-01-22-010320_initialise/: up.sql
gtfs_server/migrations/2020-01-27-094809_create-indices/: down.sql  up.sql
gtfs_server/src/: api_fetcher.rs  database.rs  gtfs_data.rs  main.rs
gtfs_server/src/protobuf/: gtfs_realtime.proto
gtfs_server/src/sql_queries/: stop_times.sql
gtfs_static_importer/: Cargo.toml  README.md
gtfs_static_importer/src/: main.rs  utils.rs
migrations/2020-01-22-010320_initialise/: down.sql
migrations/2020-02-04-234958_add_realtime_feed_configs/: down.sql  up.sql
src/: api_fetcher.rs  database.rs  gtfs_data.rs  main.rs  model.rs  schema.rs
src/protobuf/: gtfs_realtime.rs  mod.rs
src/sql_queries/: stop_times.sql
