[package]
name = "transit_server"
version = "0.1.0"
authors = ["TheImaginaryOne <johnathanleung@hotmail.co.nz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4", features = ["postgres", "r2d2", "chrono"] }
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "0.2", features = ["macros", "time", "blocking"] }
warp = "0.2"
env_logger = "0.6"
log = "0.4"
dotenv = "0.15"
derive_more = "0.99"
futures = "0.3"
prost = "0.6"
reqwest = "0.10"
toml = "0.5"

[build-dependencies]
prost-build = "0.6"