[package]
name = "transit_data_importer"
version = "0.1.0"
authors = ["TheImaginaryOne <johnathanleung@hotmail.co.nz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgres = "0.17"
dotenv = "0.15"
structopt = "0.3"
derive_more = "0.99"
csv = "1.1"